--- a/src/e_cidadania/static/css/screen.css
+++ b/src/e_cidadania/static/css/screen.css
@@ -629,7 +629,7 @@ html ul.topnav li ul.subnav li a:hover { /*--Hover effect for subnav links--*/
 
 .post {
     width: 100%;
-    border-bottom: 5px solid #aaa;
+    /* border-bottom: 5px solid #aaa;*/
     background: #fff;
     margin: 20px 5px 20px 5px;
     -webkit-border-top-left-radius: 20px;
@@ -641,15 +641,17 @@ html ul.topnav li ul.subnav li a:hover { /*--Hover effect for subnav links--*/
 }
 
 .post h1 {
+    padding-bottom: 3px;
     margin: 15px;
     font-size: 2em;
     font-family: 'SansationRegular';
+    border-bottom: 3px solid #999;
 }
 
 .post h4 {
     font-size: 0.95em;
     color: #000;
-    margin-top: -15px;
+    margin-top: -12px;
     margin-left: 16px;
     font-weight: normal;
 }
