--- a/src/e_cidadania/templates/site_index.html
+++ b/src/e_cidadania/templates/site_index.html
@@ -31,7 +31,7 @@
             </div>
           {% endif %}
           <h1><a href="{{ request.path }}news/{{ news.id }}">{{ news.post_title }}</a></h1>
-          <h4>{% trans "Written by" %} {{ news.post_author }} {% trans "on" %} {{ news.post_pubdate }}</h4>
+          <h4>{% trans "Written by" %} {{ news.post_author }} {% trans "on" %} {{ news.post_pubdate }} | {% trans "Tags" %}: {{ news.post_tags }}</h4>
           <p>{{ news.post_message|safe }}</p>
         </div>
       {% endif %}
