--- a/src/e_cidadania/apps/spaces/templates/spaces/space_index.html
+++ b/src/e_cidadania/apps/spaces/templates/spaces/space_index.html
@@ -30,7 +30,7 @@
               </div>
               {% endif %}
               <h1><a href="{{ request.path }}news/{{ news.id }}">{{ news.post_title }}</a></h1>
-              <p>{{ news.post_message }}</p>
+              <p>{{ news.post_message|safe }}</p>
               {% get_comment_count for news as comment_count %}
               <p>{% trans "Written by" %} {{ news.post_author }} {% trans "on" %} {{ news.post_pubdate }} | <a href="{{ request.path }}news/{{ news.id }}/">{{ comment_count }} {% trans "comments" %}</a></p>
             </div>
