--- a/src/e_cidadania/static/css/screen.css
+++ b/src/e_cidadania/static/css/screen.css
@@ -167,17 +167,18 @@ input[type="text"], input[type="password"] {
 
 
 /* DIVS */
-#topbar {
+.topbar {
     width: 100%;
-    height: 35px;
+    height: 25px;
     margin: 0;
     padding: 0;
+    font-size: 0.8em;
     background: url(../assets/userbar.png) #000 repeat;
 }
 
 #version {
     float: left;
-    line-height: 35px;
+    line-height: 25px;
     font-weight: bold;
     color: #FFF;
     margin-left: 20px;
