--- a/src/e_cidadania/templates/base.html
+++ b/src/e_cidadania/templates/base.html
@@ -4,6 +4,11 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="es-ES" xml:lang="es-ES">
 	<head>
 		<title>{% block title %}{% endblock %}</title>
+		<link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}/css/reset.css" media="screen" />
+		<link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}/css/text.css" media="screen" />
+		<link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}/css/grid.css" media="screen" />
+		<link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}/css/layout.css" media="screen" />
+		<link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}/css/nav.css" media="screen" />
 		<link rel="stylesheet" type="text/css" media="screen" href="/{{ STATIC_URL }}/css/screen.css"/>
 		<link rel="shortcut icon" href="/{{ STATIC_URL }}/assets/favicon.ico" type="image/ico"/>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
@@ -12,50 +17,58 @@
 		<script src="/{{ STATIC_URL }}/js/jquery.js" type="text/javascript"></script>
   	<script src="/{{ STATIC_URL }}/js/jquery-ui.js" type="text/javascript"></script>
 		<script src="/{{ STATIC_URL }}/js/dropdown.js" type="text/javascript"></script>
+		
+		{% comment %}
+		  This will load the wysiwyg system for all pages that iherit from base.html
+		{% endcomment %}
 		{% wysiwyg_setup %}
 	</head>
 	<body>
-	  <div id="topbar">
-	    <div id="version">
-	      version 0.1 ALPHA (Iroquois)
+
+    <div class="topbar">
+      <div id="version">
+	      v0.1 alpha
 	    </div>
 	    <div id="userbar">
 	      {% include "menu.html" %}
 	    </div>
 	  </div>
 
-	  <div id="header">
-	    {% block header %}
+	  <div class="container_16">
+      
+      <div class="grid_16">
+        {% block header %}
+	        <div id="logo">
+	          {% block logo %}
+	            <a href="/"><img src="/{{ STATIC_URL }}/assets/logos/index.png"/></a>
+	          {% endblock %}
+	        </div>
 
-	      <div id="logo">
-	        {% block logo %}
-	          <a href="/"><img src="/{{ STATIC_URL }}/assets/logos/index.png"/></a>
-	        {% endblock %}
-	      </div>
+  	      <div id="banner">
+  	        {% block banner %}
+  	          <img src="/{{ STATIC_URL }}/assets/banners/index.png"/>
+  	        {% endblock %}
+  	      </div>
+  	    {% endblock %}
+      </div>
 
-	      <div id="banner">
-	        {% block banner %}
-	          <img src="/{{ STATIC_URL }}/assets/banners/index.png"/>
-	        {% endblock %}
-	      </div>
-
-	    {% endblock %}
-	  </div>
-
-	  <div id="content">
-	    {% block content %}
-
-        {% block centercol %}
+      <div class="clear"></div>
+      
+        {% block content %}
+        <div id="grid">
+          {% block centercol %}
+          {% endblock %}
+          
+          {% block rightcol %}
+          {% endblock %}
+        </div>
         {% endblock %}
 
-  	    {% block rightcol %}
-        {% endblock %}
+      <div class="clear"></div>
 
-      {% endblock %}
     </div>
 
     <div id="footer">
-      
       <div id="footerimg">
         {% block footerimg %}
           <img src="/{{ STATIC_URL }}/assets/logocidadania.jpg" /><br />
@@ -76,6 +89,7 @@
         <p>(c) 2010-{% now "Y" %} <a href="http://trac.cidadania.coop">e-cidadania</a> {% trans "created by" %} <a href="http://www.cidadania.coop">Cidadania Sociedade Cooperativa</a></p>
         <p>{% trans "We guarantee that this program will not become aware and take over the world" %}</p>
     </div>
+	  
 	</body>
 </html>
 
