--- a/src/e_cidadania/static/css/layout.css
+++ b/src/e_cidadania/static/css/layout.css
@@ -28,7 +28,7 @@ a:hover {
 ----------------------------------------------- */
 .container_12,
 .container_16 {
-	background:#fff;
+	background:#FAFAFA;
 }
 
 
