--- a/src/e_cidadania/templates/site_index.html
+++ b/src/e_cidadania/templates/site_index.html
@@ -24,14 +24,15 @@
     {% for news in publication %}
       {% if news.post_pub_index %}
         <div class="post">
-          {% if user.is_staff %}
-            <div id="tools">
-              <a href="{{ request.path }}news/{{ news.id }}/edit/">{% trans "Edit" %}</a> |
-              <a href="{{ request.path }}news/{{ news.id }}/delete/">{% trans "Delete" %}</a>
-            </div>
-          {% endif %}
           <h1><a href="{{ request.path }}news/{{ news.id }}">{{ news.post_title }}</a></h1>
-          <h4>{% trans "Written by" %} {{ news.post_author }} {% trans "on" %} {{ news.post_pubdate }} | {% trans "Tags" %}: {{ news.post_tags }}</h4>
+          <h4>{% trans "Written by" %} {{ news.post_author }} {% trans "on" %} {{ news.post_pubdate }} | {% trans "Tags" %}: {{ news.post_tags }}
+            {% if user.is_staff %}
+              <div id="tools">
+                <a href="{{ request.path }}news/{{ news.id }}/edit/">{% trans "Edit" %}</a> |
+                <a href="{{ request.path }}news/{{ news.id }}/delete/">{% trans "Delete" %}</a>
+              </div>
+            {% endif %}
+          </h4>
           <p>{{ news.post_message|safe }}</p>
         </div>
       {% endif %}
