--- a/src/e_cidadania/static/css/screen.css
+++ b/src/e_cidadania/static/css/screen.css
@@ -259,11 +259,16 @@ input[type="text"], input[type="password"] {
     padding: 5px;
 }
 
+.header {
+    border-bottom: 3px solid #000;
+    margin-bottom: 20px;
+}
 #header {
     margin: 0px auto;
     width: 100%;
     height: 130px;
     background: #dfdfdf;
+    border-bottom: 3px solid #000;
 }
 
 #logo {
