Fixed img margin on news

--- a/src/e_cidadania/static/css/screen.css
+++ b/src/e_cidadania/static/css/screen.css
@@ -676,5 +676,9 @@ html ul.topnav li ul.subnav li a:hover { /*--Hover effect for subnav links--*/
     text-align: justify;
     margin: 15px;
 }
+
+.post img {
+    margin: 10px;
+}
 /* END NEWS */
 
