--- a/src/e_cidadania/static/css/layout.css
+++ b/src/e_cidadania/static/css/layout.css
@@ -16,7 +16,7 @@ body {
 ----------------------------------------------- */
 a {
 	color: #000;
-	font-weight:bold;
+	/*font-weight:bold;*/
 	text-decoration: none;
 }
 a:hover {
