--- a/src/e_cidadania/apps/rosetta/templates/rosetta/css/rosetta.css
+++ b/src/e_cidadania/apps/rosetta/templates/rosetta/css/rosetta.css
@@ -4,6 +4,8 @@ td.translation label {font-size: 95%;}
 td.translation textarea, td.original { font-size:110%;}
 td.translation,td.original {width:30%;}
 td.original .plural-container { position:relative}
+td.original .context,td.original .message {display:block;}
+td.original .context { margin-top: 2em; color: #bbb; font-size:90%; }
 td.translation textarea{ width:98.5%; min-height:25px; margin:2px 0; }
 .rtl td.translation textarea { direction: rtl;}
 .plural span {display:block; margin:2px 0; position:absolute}
