--- a/src/e_cidadania/apps/rosetta/templates/rosetta/languages.html
+++ b/src/e_cidadania/apps/rosetta/templates/rosetta/languages.html
@@ -6,9 +6,20 @@
 {% block breadcumbs %}<a href="{% url rosetta-pick-file %}">{% trans "Home" %}</a> &rsaquo; {% trans "Language selection" %}{% endblock %}
 
 {% block main %}
+    <h1>&nbsp;</h1>
+    <ul class="object-tools">
+        <li class="nobubble">{% trans "Filter" %}:</li>
+        <li{% ifequal rosetta_i18n_catalog_filter 'project' %} class="active"{% endifequal %}><a href="?filter=project">{% trans "Project" %}</a></li>
+        <li{% ifequal rosetta_i18n_catalog_filter 'third-party' %} class="active"{% endifequal %}><a href="?filter=third-party">{% trans "Third party" %}</a></li>
+        <li{% ifequal rosetta_i18n_catalog_filter 'django' %} class="active"{% endifequal %}><a href="?filter=django">Django</a></li>
+        <li{% ifequal rosetta_i18n_catalog_filter 'all' %} class="active"{% endifequal %}><a href="?filter=all">{% trans "All" %}</a></li>
+    </ul>
+
     {% if has_pos %}
+
     {% for lid,language,pos in languages %}
     {% if pos %}
+        
         <div class="module">
             <h2>{{language}}</h2>
             <table cellspacing="0">
@@ -27,11 +38,11 @@
                     {% for app,path,po in pos %}
                     <tr class="{% cycle row1,row2 %}">
                         <td><a href="{% url rosetta-language-selection lid,forloop.counter0 %}{% if do_django %}?django{% endif %}{% if do_rosetta %}?rosetta{% endif %}">{{ app|title }}</a></td>
-                        <td class="r">{{po.percent_translated|floatformat:2}}%</td>
-                        <td class="r">{{po|length}}</td>
-                        <td class="r">{{po.translated_entries|length}}</td>
-                        <td class="r">{{po.fuzzy_entries|length}}</td>
-                        <td class="r">{{po.obsolete_entries|length}}</td>
+                        <td class="ch-progress r">{{po.percent_translated|floatformat:2}}%</td>
+                        <td class="ch-messages r">{{po.translated_entries|add:po.untranslated_entries|length}}</td>
+                        <td class="ch-translated r">{{po.translated_entries|length}}</td>
+                        <td class="ch-fuzzy r">{{po.fuzzy_entries|length}}</td>
+                        <td class="ch-obsolete r">{{po.obsolete_entries|length}}</td>
                         <td class="hint">{{ path }}</td>
                     </tr>
                     {% endfor %}
