Minor fixes to userprofile templates

--- a/src/e_cidadania/apps/userprofile/templates/userprofile/profile/overview.html
+++ b/src/e_cidadania/apps/userprofile/templates/userprofile/profile/overview.html
@@ -127,21 +127,13 @@
 			    <h1>{% trans "Your proposals" %}</h1>
           {% for p in proposals %}
             <div id="proposal-wrapper">
-              {% if user.is_staff %}
-                <div id="tools">
-                  <a href="add/">{% trans "Add" %}</a> | 
-                  <a href="edit/{{ p.id }}">{% trans "Edit" %}</a> |
-                  <a href="delete/{{ p.id }}">{% trans "Delete" %}</a>
-                </div>
-              {% endif %}
             <div id="votes">
-              <span style="font-size:30px;text-align:center;">{{ p.support_votes }}</span><br/>apoyos
+              <span style="font-size:24px;text-align:center;">{{ p.support_votes }}</span><br/>apoyos
             </div>
             <!-- Here goes the voting button -->
             <div id="proposal">
-              <div class="title"><a href="{{ request.path }}view/{{ p.id }}/">{{ p.title }}</a></div>
-              <div class="message">{{ p.message|truncatewords:12 }}</div>
-              <div class="creator">{% trans "proposed by " %} <a href="/accounts/{{ p.author }}">{{ p.author }}</a> {% trans " at " %} {{ p.pub_date|date:"j/m/Y G:i" }}</div>
+              <div class="title" style="font-size: 1.5em;"><a href="{{ request.path }}view/{{ p.id }}/">{{ p.title }}</a></div>
+              <div class="creator">{{ p.pub_date|date:"j/m/Y G:i" }}</div>
             </div>
               {% comment %}
                 The following div is to make the wrapper to wrap everything.
