--- a/src/e_cidadania/apps/userprofile/templates/userprofile/profile/personal_done.html
+++ b/src/e_cidadania/apps/userprofile/templates/userprofile/profile/personal_done.html
@@ -6,10 +6,9 @@
 
 {% block content %}
 	<div id="contentinside">
-		{% trans "Your profile information has been updated successfully" %}</br></br>
+		{% trans "Your profile information has been updated successfully." %}<br/><br/><br/>
 		<div>
-		    <a href="/">&laquo; {% trans "Back to home" %}</a></br>
-	        <a href="/accounts/profile">&laquo; {% trans "Back to your profile" %}</a>
-	    </div>
+		    {% trans "You can go" %} <a href="/"><u>{% trans "back to home" %}</u></a> {% trans "or" %} <a href="/accounts/"><u>{% trans "back to your profile" %}</u></a>
+	  </div>
 	</div>
 {% endblock %}
