Fixed hyperlink in menu that messes up the XHTML

--- a/src/e_cidadania/templates/menu.html
+++ b/src/e_cidadania/templates/menu.html
@@ -29,7 +29,7 @@
 	          <li><a href="/rosetta">{% trans "Translation" %}</a></li>
 	        {% endif %}
 	          <li><a href="/accounts/messages">{% trans "Messages" %}</a></li>
-	          <li><a href="/accounts/edit/personal">{% trans "Edit profile" %}</li>
+	          <li><a href="/accounts/edit/personal">{% trans "Edit profile" %}</a></li>
 	          <li><a href="/accounts/logout">{% trans "Logout" %}</a></li>
 	      </ul>
 	    </li>
