--- a/src/e_cidadania/static/css/screen.css
+++ b/src/e_cidadania/static/css/screen.css
@@ -383,6 +383,7 @@ table#personal th {
     text-align: right;
     padding-top: 20px;
     padding-bottom: 20px;
+    margin-top: 20px;
 }
 
 #footer p {
