--- a/src/e_cidadania/templates/base.html
+++ b/src/e_cidadania/templates/base.html
@@ -71,11 +71,8 @@
     <div id="footer">
       <div id="footerimg">
         {% block footerimg %}
-          <img src="/{{ STATIC_URL }}/assets/logocidadania.jpg" /><br />
-          Corredoira das Fraguas, 5, 1 izq.<br />
-          15703 Santiago de Compostela<br />
-          A Coruña<br />
-          Tlf: 999 999 999<br />
+          <img src="/{{ STATIC_URL }}/assets/logos/cidadania.png" />
+          <img src="/{{ STATIC_URL }}/assets/logos/algueirada.png" />
         {% endblock %}
       </div>
 	    {% block footer %}
