--- a/src/e_cidadania/apps/userprofile/templates/userprofile/profile/overview.html
+++ b/src/e_cidadania/apps/userprofile/templates/userprofile/profile/overview.html
@@ -132,7 +132,7 @@
             </div>
             <!-- Here goes the voting button -->
             <div id="proposal">
-              <div class="title" style="font-size: 1.5em;"><a href="{{ request.path }}view/{{ p.id }}/">{{ p.title }}</a></div>
+              <div class="title" style="font-size: 1.5em;"><a href="/spaces/{{ p.belongs_to }}/proposal/view/{{ p.id }}/">{{ p.title }}</a></div>
               <div class="creator">{{ p.pub_date|date:"j/m/Y G:i" }}</div>
             </div>
               {% comment %}
