Added hyperlinks in footer

--- a/src/e_cidadania/templates/base.html
+++ b/src/e_cidadania/templates/base.html
@@ -71,8 +71,8 @@
     <div id="footer">
       <div id="footerimg">
         {% block footerimg %}
-          <img src="/{{ STATIC_URL }}/assets/logos/cidadania.png" />
-          <img src="/{{ STATIC_URL }}/assets/logos/algueirada.png" />
+          <a href="http://www.cidadania.coop"><img src="/{{ STATIC_URL }}/assets/logos/cidadania.png" /></a>
+          <a href="http://algueirada.blogaliza.org/"><img src="/{{ STATIC_URL }}/assets/logos/algueirada.png" /></a>
         {% endblock %}
       </div>
 	    {% block footer %}
