Created initial data and language catalog generator script

--- a/src/e_cidadania/apps/staticpages/templates/staticpages/staticpages_index.html
+++ b/src/e_cidadania/apps/staticpages/templates/staticpages/staticpages_index.html
@@ -7,6 +7,9 @@
     <div class="grid_16">
       {{ page.content|safe }}
       
+      <div class="pagebutton">
+        <a href="/">&laquo; {% trans "Go back" %}</a>
+      </div>
       <div class="pageinfo">
         {% trans "created" %} {{ page.date }} {% trans "by" %} {{ page.author }}
       </div>
