--- a/src/e_cidadania/templates/site_index.html
+++ b/src/e_cidadania/templates/site_index.html
@@ -94,6 +94,6 @@
 {% endblock %}
 
 {% block footer %}
-<p>{% trans "About" %} | {% trans "Developers" %} | {% trans "Terms of service" %} | {% trans "Help"%}</p><br /><br />
+<p>{% trans "About" %} | {% trans "API" %} | {% trans "Developers" %} | {% trans "Terms of service" %} | {% trans "Help"%}</p><br /><br />
 {% endblock %}
 
